fix clipping

--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -139,7 +139,7 @@
       right: 10px;
       top: 322px;
       width: 339px;
-      height: 333px;
+      height: 303px;
       display: grid;
       grid-template-columns: auto;
       grid-auto-rows: 30px;
